Update: Added 'Go to Home' link and search input fixes across pages

--- a/about.html
+++ b/about.html
@@ -82,4 +82,7 @@
       © 2025 <strong>Majeeo Nuts</strong>. All Rights Reserved.
     </div>
   </div>
+  <div class="text-center mt-4">
+  <a href="home.html" class="text-red-700 underline text-sm hover:text-red-900">← Go to Home</a>
+</div>
 </footer>
