--- a/product-almonds.html
+++ b/product-almonds.html
@@ -192,7 +192,9 @@
   renderMiniCart();
   updateCartBadge();
 </script>
-
+<div class="text-center mt-4">
+  <a href="home.html" class="text-red-700 underline text-sm hover:text-red-900">← Go to Home</a>
+</div>
 </body>
 </html>
 
