--- a/privacy.html
+++ b/privacy.html
@@ -21,5 +21,8 @@
 
     <p>If you believe any information we hold is incorrect, contact us at maheshgawade7799@gmail.com.</p>
   </div>
+  <div class="text-center mt-4">
+  <a href="home.html" class="text-red-700 underline text-sm hover:text-red-900">← Go to Home</a>
+</div>
 </body>
 </html>
