--- a/return.html
+++ b/return.html
@@ -18,5 +18,9 @@
       <li>Warranty-related complaints should be taken up with the manufacturer directly.</li>
     </ul>
   </div>
+  <div class="text-center mt-4">
+  <a href="home.html" class="text-red-700 underline text-sm hover:text-red-900">← Go to Home</a>
+</div>
+
 </body>
 </html>
