--- a/product-almonds.html
+++ b/product-almonds.html
@@ -7,12 +7,24 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <style>
-    body { font-family: 'Poppins', sans-serif; background-color: #fffef8; }
-    .cart-item { @apply flex justify-between items-center border p-2 rounded text-xs bg-white shadow-sm; }
-    .cart-item p { @apply mb-0; }
-    .nav-center { position: absolute; left: 50%; transform: translateX(-50%); }
-  </style>
+ <style>
+  body { font-family: 'Poppins', sans-serif; background-color: #fffef8; }
+  .cart-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid #e5e7eb;
+    padding: 0.5rem;
+    border-radius: 0.25rem;
+    font-size: 0.75rem;
+    background-color: #ffffff;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+  }
+  .cart-item p {
+    margin-bottom: 0;
+  }
+  .nav-center { position: absolute; left: 50%; transform: translateX(-50%); }
+</style>
 </head>
 <body class="text-gray-800 text-sm">
 
