Update: Made 'MajeeoNuts' in header link to home.html on all key pages

--- a/cart.html
+++ b/cart.html
@@ -14,7 +14,9 @@
 
   <!-- Header -->
   <header class="bg-red-800 text-white py-3 px-6 flex justify-between items-center">
-    <h1 class="text-xl font-bold">MajeeoNuts</h1>
+<h1 class="text-xl font-bold">
+  <a href="home.html" class="hover:underline">MajeeoNuts</a>
+</h1>
     <a href="home.html" class="text-sm bg-white text-red-700 px-3 py-1 rounded-full font-semibold hover:bg-yellow-100 flex items-center">
       🛒 Go to Cart&nbsp;<span id="cart-count" class="ml-1 bg-red-600 text-white px-2 rounded-full text-[10px] font-bold"></span>
     </a>
