--- a/about.html
+++ b/about.html
@@ -9,7 +9,9 @@
 <body class="bg-yellow-50 font-sans">
 
   <header class="bg-green-800 text-white p-4 flex justify-between items-center">
-    <h1 class="text-2xl font-bold">MajeeoNuts</h1>
+<h1 class="text-xl font-bold">
+  <a href="home.html" class="hover:underline">MajeeoNuts</a>
+</h1>
     <nav class="space-x-4">
       <a href="home.html" class="hover:underline">Home</a>
       <a href="about.html" class="hover:underline">About Us</a>
