Update: Made 'MajeeoNuts' logo link to home.html in product-almonds.html

--- a/product-almonds.html
+++ b/product-almonds.html
@@ -30,7 +30,9 @@
 
 <!-- Header -->
 <header class="bg-red-800 text-white py-3 px-6 relative shadow flex items-center justify-between">
-  <h1 class="text-xl font-bold">MajeeoNuts</h1>
+<h1 class="text-xl font-bold">
+  <a href="home.html" class="hover:underline">MajeeoNuts</a>
+</h1>
   <nav class="space-x-4 text-sm nav-center">
     <a href="home.html" class="hover:underline">Home</a>
     <a href="about.html" class="hover:underline">About Us</a>
