--- a/product-almonds.html
+++ b/product-almonds.html
@@ -162,13 +162,13 @@
   const name = "Premium Almonds (Badam)";
   const price = grams;
 
-  const existing = cart.find(item => item.name === name && item.quantity === grams);
-  if (existing) {
-    existing.quantity += grams;
-    existing.price += price;
-  } else {
-    cart.push({ name, quantity: grams, price });
-  }
+  const existing = cart.find(item => item.name === name && item.grams === grams);
+if (existing) {
+  existing.count = (existing.count || 1) + 1;
+  existing.price += price;
+} else {
+  cart.push({ name, grams, price, count: 1 });
+}
 
   localStorage.setItem("majeeo-cart", JSON.stringify(cart));
   renderMiniCart();
